test/type_inference/negative/type_args9.impala
fn f[T](g: fn(T)->T) -> () {}

fn main() -> () {
    f(|x| x);
}
