test/type_inference/negative/type_args9.output
type_args9.impala:4 col 5 - 12: error: could not find instance for type variable #0
